# lingmo-kwin-plugins-lpk

./: README.md  build.lpm
.github/workflows/: build.yml  release.yml
debian/: changelog
plugins/decoration/: CMakeLists.txt  button.cpp  button.h  decoration.cpp  decoration.h
